Let text overflow with an ellipsis on medium-sized screens to avoid table breakage.

--- a/client/me/billing-history/style.scss
+++ b/client/me/billing-history/style.scss
@@ -123,6 +123,12 @@
 		display: block;
 		font-size: 12px;
 		font-style: italic;
+
+		@include breakpoint( '660px-800px' ) {
+			max-width: 220px;
+			overflow: hidden;
+			text-overflow: ellipsis;
+		}
 	}
 }
 
